<?xml version="1.0"?>
<package format="2">
  <name>convert_kitti_to_ros</name>
  <version>1.0.1</version>
  <description>The convert_kitti_to_ros package</description>

  <maintainer email="foad@todo.todo">Foad Hajiaghajani</maintainer>

  <license>TODO</license>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>


</package>
